# commit-formatter

./: .commit-hook.toml  .pre-commit-hooks.yaml  README.md  hook.py  pyproject.toml
